--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -27,6 +27,9 @@
             <%= link_to "新規登録", new_user_registration_path, class: 'nav-link text-dark' %>
           </li>
           <li class="nav-item ml-3">
+            <%= link_to "ゲストログイン", users_guest_sign_in_path, class: 'nav-link text-dark', method: :post %>
+          </li>
+          <li class="nav-item ml-3">
             <%= link_to "ログイン", new_user_session_path, class: 'nav-link text-dark' %>
           </li>
         <% end %>
