--- a/app/views/public/users/edit.html.erb
+++ b/app/views/public/users/edit.html.erb
@@ -2,12 +2,14 @@
   <h4 class="text-center mb-3">ユーザー編集</h4>
 
   <%= form_with model: @user, url: users_information_path, method: :patch do |f| %>
-    <div class="row">
-      <div class="col-5 text-center mx-auto">
-        <%= f.label :name, "ユーザー名" %><br>
-        <%= f.text_field :name, autofocus: true, class: "form-control" %>
+    <% if current_user.name != "guestuser" %>
+      <div class="row">
+        <div class="col-5 text-center mx-auto">
+          <%= f.label :name, "ユーザー名" %><br>
+          <%= f.text_field :name, autofocus: true, class: "form-control" %>
+        </div>
       </div>
-    </div>
+    <% end %>
 
     <div class="col-5 text-center mx-auto">
       <%= f.label :color, "イメージカラー選択", class: "mt-3" %>
@@ -57,9 +59,9 @@
     </div>
     <%= f.submit "変更を保存する", class: "btn btn-outline-secondary my-3" %>
   <% end %>
-
-  <%= link_to "退会する", users_out_check_path, class: "btn btn-outline-secondary my-3" %>
-
+  <% if current_user.name != "guestuser" %>
+    <%= link_to "退会する", users_out_check_path, class: "btn btn-outline-secondary my-3" %>
+  <% end %>
 </div>
 
 <%= javascript_pack_tag 'user' %>
